castle_apartments/static/css/main.css
body {
  background: #fafafa;
  color: #333333;
  margin-top: 5rem;
  padding-bottom: 10rem;
}

h1, h2, h3, h4, h5, h6 {
  color: #444444;
}

ul {
  margin: 0;
}

.bg-steel {
  background-color: #330000;
}

.site-header .navbar-nav .nav-link {
  color: #cbd5db;
}

.site-header .navbar-nav .nav-link:hover {
  color: #ffffff;
}

.site-header .navbar-nav .nav-link.active {
  font-weight: 500;
}

.content-section {
  background: #ffffff;
  padding: 10px 20px;
  border: 1px solid #dddddd;
  border-radius: 3px;
  margin-bottom: 20px;
}

.article-title {
  color: #444444;
}

a.article-title:hover {
  color: #428bca;
  text-decoration: none;
}

.article-content {
  white-space: pre-line;
}

.article-img {
  height: 65px;
  width: 65px;
  margin-right: 16px;
}

.article-metadata {
  padding-bottom: 1px;
  margin-bottom: 4px;
  border-bottom: 1px solid #e3e3e3
}

.article-metadata a:hover {
  color: #333;
  text-decoration: none;
}

.article-svg {
  width: 25px;
  height: 25px;
  vertical-align: middle;
}

.account-img {
  height: 125px;
  width: 125px;
  margin-right: 20px;
  margin-bottom: 16px;
}

.account-heading {
  font-size: 2.5rem;
}

.comp-logo {
    height: 80px;
    margin-left: 40px;
}

.property-container {
    display: flex;
    justify-content: center;
    width: 100%;
}

.property-image {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
}

.site-footer {
    background-color: #73605B;
    color: #F5F5F5 ;
    /*padding-bottom: 20px;*/
    margin-top: 40px;
    bottom: 0px;
    position: fixed;
    width: 100%;
}

.site-footer h4 {
    /*var #73605B;*/
    color: #F5F5F5;
    margin-bottom: 15px;
}

.site-footer ul {
    list-style: none;
    padding-left: 0;
}

.site-footer a {
    color: #F5F5F5 ;
    text-decoration: none;
}

.site-footer a:hover {
    color: #E5D1A8 ;
    text-decoration: underline;
}

.footer-bottom {
    /*margin-top: 20px;*/
    /*padding-top: 10px;*/
    border-top: 1px solid #5f788a;
}

.row {
    display: flex;
    flex-wrap: wrap;
}

.col {
    flex: 1;
    padding: 0 15px;
    min-width: 200px;
}

.container {
    width: 80%;
    margin: 0 auto;
    max-width: 1440px;
}

.property-gallery {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 10px;
    margin-top: 20px;
}

.gallery-item img {
    width: 100%;
    height: 200px;
    object-fit: cover;
    border-radius: 5px;
}

.property-thumbnail img {
    width: 100%;
    height: 400px;
    object-fit: cover;
    border-radius: 5px;
}

.card-img-top {
    height: 200px;
    object-fit: cover;
    width: 100%;
}

